prettify source code

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,36 @@
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap");
+
+:root {
+  --primary-font: "Ubuntu", sans-serif;
+  --bg-primary: rgba(17, 17, 17, 0.9);
+}
+body {
+  overflow-x: hidden;
+}
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+  width: 100vw;
+  max-width: 100vw;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: auto;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  background-color: rgba(5, 5, 5, 0.94);
+  background-image: url("./assets/dots.svg");
+  background-size: 5%;
+}
+::-webkit-scrollbar {
+  width: 4px;
 }
 
-.App-link {
-  color: #61dafb;
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px rgb(36, 36, 36);
+  border-radius: 10px;
+  background-color: var(--bg-primary);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgba(255, 255, 255, 0.2);
+  border-radius: 10px;
 }
